Version 1.0
----------------------------------------------------------------------
2009-02-25:
	* fix for #16, install man page into fhs compliant place
	  (thanx ibtaylor)

2009-02-24:
	* fix for #17, setting PAM_TTY helps root

2008-11-04:
	* fix for #13, problems with 'make install' when asciidoc is not
	  installed and thus creates no 'alock.1'

2008-10-08:
	* improved visual feedback (#12)

2008-10-04:
	* first version with visual feedback (still rough)

2008-09-13:
	* disallow running multiple instances on the same xserver at 
	  the same time

2008-06-24:
	* minor fixes to scons
	* minor docu issues
	* (f)printf formatstring issues fixed

2008-06-19:
	* fix #8, make it more /bin/sh compatible

2007-04-20:
	* small fixes in SConstruct

2007-03-02:
	* renamed Makefile to GNUmakefile (so using bsdmake wont hurt)
	* *bsd has no shadow.h support, so we wont use it on *bsd
	* pam doesnt need -lpam_misc on *bsd

2006-10-25:
	* fixed problem with configure/make, it didnt rebuilt fresh
	  after reconfiguring

2006-09-25:
	* fixed #4, -bg image wasnt working, wrong loop

2006-09-22:
	* added new auth method: wpool, hash-based authentification
	  using the whirlpool hash algorithm, updated docs
	* minor tweaks to buildsystem and standalones
	* cosmetic issues on some files (fprintf, etc)

2006-09-19:
	* fixed #3, buildsystem doesnt built with shadow-support
	* added missing xcursors, updated docs

2006-09-18:
	* fixed #2, missing includes in Xrender check
	* fixed --enable-imlib2 wasnt implying --enable-xrender

2006-09-15:
	* minor tunes to src/Makefile
	* fixed some bashisms in configure to make it work on fbsd
	* closed issue #1, added --with-all to configure
	* started using google-hosting for issuetracking
	  (http://code.google.com/p/alock)

2006-09-11:
	* made the timeout function more clear
	* only accept rlen < 50, dont increase it when it makes no sense
	* minor splint based mods

2006-06-01:
	* fixed gmake buildsystem

2006-05-29: